          KeyboardEntry class, provided a version for Windows
          using msvcrt.

        * Fix randpool.py crash on machines with poor timer resolution.
          (Reported by Mark Moraes.)

        * If the GNU GMP library is available, two C extensions will be 
          compiled to speed up RSA and DSA operations.  (Contributed by 
          Paul Swartz.)
        

1.9alpha4
=========

        * Fix compilation problem on Windows.

        * HMAC.py fixed to work with pre-2.2 Pythons
        
        * setup.py now dies if built with Python 1.x
        

1.9alpha3
=========

        * Fix a ref-counting bug that caused core dumps.  
          (Reported by Piers Lauder and an anonymous SF poster.)
        

1.9alpha2
=========

        * (Backwards incompatible) The old Crypto.Hash.HMAC module is
          gone, replaced by a copy of hmac.py from Python 2.2's standard
          library.  It will display a warning on interpreter versions
          older than 2.2.
        
        * (Backwards incompatible) Restored the Crypto.Protocol package,
          and modernized and tidied up the two modules in it,
          AllOrNothing.py and Chaffing.py, renaming various methods
          and changing the interface.
          
        * (Backwards incompatible) Changed the function names in
          Crypto.Util.RFC1751.
        
        * Restored the Crypto.PublicKey package at user request.  I
          think I'll leave it in the package and warn about it in the
          documentation.  I hope that eventually I can point to
          someone else's better public-key code, and at that point I
          may insert warnings and begin the process of deprecating
          this code.

        * Fix use of a Python 2.2 C function, replacing it with a 
          2.1-compatible equivalent.  (Bug report and patch by Andrew
          Eland.)  

        * Fix endianness bugs that caused test case failures on Sparc,
          PPC, and doubtless other platforms.
